# sentinel-ai

./: .env.example  .gitignore  AGENTS.md  README.md  package-lock.json  package.json
apps/api/: pyproject.toml
apps/api/src/sentinel_api/: __init__.py  config.py  main.py  version.py
apps/api/src/sentinel_api/github/: __init__.py  acquisition.py  exceptions.py  limits.py  models.py  service.py  urls.py  workspace.py
apps/api/src/sentinel_api/reviewer/: __init__.py  base.py  demo.py  evidence.py  models.py  openai_provider.py  review_models.py  service.py
apps/api/src/sentinel_api/scanner/: __init__.py  cli.py  exceptions.py  file_indexer.py  framework_detector.py  models.py  redaction.py  repository_loader.py  routes.py  scan_store.py  service.py
apps/api/src/sentinel_api/scanner/ai/: __init__.py  cache.py  client.py  explanation.py  formatter.py  prompts.py  remediation.py  verification.py
apps/api/src/sentinel_api/scanner/analysis/: __init__.py  findings.py  (+6 more)
apps/api/tests/: test_health.py
apps/api/tests/github/: test_acquisition.py  test_limits.py  test_routes.py  test_service.py  test_urls.py  test_workspace.py
apps/api/tests/reviewer/: test_engine.py  test_evidence.py  test_review_models.py  test_review_routes.py
apps/api/tests/scanner/: test_ai.py  test_api.py  test_authentication.py  test_authorization_analysis.py  test_cli_ai.py  test_detection.py  test_express_routes.py  test_file_indexer.py  test_missing_authentication.py  test_prisma_schema.py  test_repository_loader.py  test_risk_scoring.py  test_route_model_mapper.py  test_rule_engine.py
(+96 files in other folders)
