[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "sentinel-api"
version = "0.1.0"
description = "Sentinel AI API service"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116,<1.0",
  "pydantic>=2.11,<3.0",
  "uvicorn[standard]>=0.35,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1.0",
  "mypy>=1.17,<2.0",
  "pytest>=8.4,<10.0",
  "ruff>=0.12,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sentinel_api"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
